# sec-papers-collection

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc.json  404.html  CLAUDE.md  CNAME  I18N_GUIDE.md  README.md  README_zh.md  accepted-papers.html  bonus.txt  build-and-deploy.sh  config.example.yml  config.yml  data.json  data.yml  index.html  main.py  manual_fix.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  server.py  sitemap.xml  tailwind.config.js  vercel.json  vite.config.js
analyzers/: acmbib_analyzer.py  bib_analyzer.py  csv_analyzer.py  icse_website_extractor.py  llm_analyzer.py  server.py  xplore_analyzer.py  xploreapi.py  zip_manager.py
assets/: About-69b48555.js  About-7FP6XlTo.js  About-C6jlwQvK.js  About-CZZJB64C.js  About-Cdl2BA2C.css  About-DnVk-PM4.js  About-DsxZLETE.js  About-SL_7K5E6.js  About-bc07c5fc.js  About-da95266a.css  About-e0045f10.js  About-tRFLNBju.js  Awards-B2wSajmn.js  Awards-BKe6amTV.js  Awards-BaEppcdn.js  Awards-Clg9FkZ9.js  Awards-Dhstzw7j.js  Awards-qBCMIK-0.js  Dashboard-2mn2vDOi.js  Dashboard-BFHngG72.js  Dashboard-BRs38J7V.js  Dashboard-CGZSiftL.js  Dashboard-CNHF0KpQ.js  Dashboard-CskMRkJq.css  Dashboard-CuHtRt87.css  Dashboard-D7uIR5jl.css  Dashboard-DRkNCCBC.js  Dashboard-DkFNRCAC.js  Dashboard-QWNlDO1x.css  Home-05e032d1.css  Home-34704bd8.js  Home-968ecfa0.css  Home-a75ab29a.css  Home-c6e9f5b2.js  Home-fb808531.js  Search-03e73fee.css  Search-30f5e763.js  Search-5b92d7e5.css  Search-6TV8GvKc.js  Search-BP5IU_30.css  (+97 more)
ccs_2015/: index.html
ccs_2016/: index.html
(+482 files in other folders)
