[project]
name = "sec-papers-collection-vue"
version = "0.3.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bibtexparser>=1.4.3",
    "chardet>=5.2.0",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openai>=2.13.0",
    "pandas>=2.3.3",
    "pycurl>=7.45.7",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "pyzipper>=0.3.6",
    "requests>=2.32.5",
    "socksio>=1.0.0",
]
